--- a/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
+++ b/samples/ChartJs.Blazor.Sample/_ViewImports.cshtml
@@ -4,8 +4,9 @@
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
 @using ChartJs.Blazor
-@using ChartJs.Blazor.Shared
+@using ChartJs.Blazor.Components
 @using ChartJs.Blazor.ChartJS
+@using ChartJs.Blazor.ChartJS.BarChart
 @using ChartJs.Blazor.Sample
 @using ChartJs.Blazor.Sample.Shared
 @addTagHelper *,ChartJs.Blazor
