--- a/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/Index.cshtml
@@ -1,51 +1,53 @@
 ﻿@page "/"
 @using ChartJs.Blazor.ChartJS
-@using ChartJs.Blazor.Shared
+@using ChartJs.Blazor.ChartJS.BarChart
+@using ChartJsBarChart = ChartJs.Blazor.Components.ChartJsBarChart
 
 <div class="container">
     <h2>Chart JS charts using Blazor</h2>
     <div class="row">
         <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
     </div>
-    <ChartJsBarChart ref="barChartJs" Chart="@blazorBarChartJS" Width="600" Height="300"/>
+    <ChartJsBarChart ref="barChart"
+                     Config="@barChartConfig"
+                     Width="600"
+                     Height="300"/>
 </div>
-
 
 @functions {
 
-    public ChartJSChart blazorBarChartJS { get; set; }
-    ChartJsBarChart barChartJs;
+    public ChartJsBarChart barChart { get; set; }
+    public BarChartConfig barChartConfig { get; set; }
 
     protected override void OnInit()
     {
-        blazorBarChartJS = blazorBarChartJS ?? new ChartJSChart()
+        barChartConfig = barChartConfig ?? new BarChartConfig()
         {
-            ChartType = ChartTypes.BAR.ToString(),
-            CanvasId = "myFirstBarChart",
-            Options = new ChartJsOptions()
+            CanvasId = "myBarChartCanvas",
+            Options = new BarChartOptions()
             {
                 Text = "Sample chart from Blazor",
-                BorderWidth = 1,
-                Display = true
+                Display = true,
+                Responsive = false
             },
-            Data = new ChartJsData()
+            Data = new BarChartData
             {
-                Labels = new List<string>() {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
-                Datasets = new List<ChartJsDataset>()
+                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
+                Datasets = new List<BarChartDataset>
                 {
-                    new ChartJsBarDataset()
+                    new BarChartDataset
                     {
                         Label = "# of Votes from blazor",
                         BackgroundColor = "#cc65fe",
                         BorderColor = "#cc65fe",
-                        Data = new List<dynamic>() {19, 12, 5, 3, 3, 2}
+                        Data = new List<dynamic> {19, 12, 5, 3, 3, 2}
                     },
-                    new ChartJsBarDataset()
+                    new BarChartDataset
                     {
                         Label = "# of Likes from blazor",
                         BackgroundColor = "#36a2eb",
                         BorderColor = "#36a2eb",
-                        Data = new List<dynamic>() {30, 10, 15, 13, 13, 12}
+                        Data = new List<dynamic> {30, 10, 15, 13, 13, 12}
                     }
                 }
             }
@@ -54,31 +56,18 @@
 
     protected override void OnAfterRender()
     {
-        Console.WriteLine("OnAfterRender");
-        barChartJs.UpdateChart(blazorBarChartJS);
+        Console.WriteLine("OnAfterRender - bar");
+    //barChartJs.UpdateChart(barChartDat, barChartoptionsa);
+        barChart.Update();
     }
 
     public void UpdateChart()
     {
     //Update existing dataset
-        blazorBarChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
-        var firstDataSet = blazorBarChartJS.Data.Datasets[0];
-        (firstDataSet as ChartJsDataset).Data.Add(DateTime.Now.Second);
+    //barChartData.Labels.Add($"New{DateTime.Now.Second}");
+    //barChartData.Datasets.First().Data.Add(DateTime.Now.Second);
 
-    //Add new dataset
-    //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
-    //{
-    //    BackgroundColor = "#cc65fe",
-    //    BorderColor = "#cc65fe",
-    //    Label = "# of Votes from blazor 1",
-    //    Data = new List<int> {20,21,12,3,4,4},
-    //    Fill = true,
-    //    BorderWidth = 2,
-    //    PointRadius = 3,
-    //    PointBorderWidth = 1
-    //});
-
-        barChartJs.UpdateChart(blazorBarChartJS);
+    //barChartJs.UpdateChart(barChartData);
     }
 
 }
