--- a/src/ChartJs.Blazor/Components/ChartJsBubbleChart.cshtml
+++ b/src/ChartJs.Blazor/Components/ChartJsBubbleChart.cshtml
@@ -1,15 +1,16 @@
 ﻿@using ChartJs.Blazor.ChartJS
+@using ChartJs.Blazor.ChartJS.BubbleChart
 @using Microsoft.AspNetCore.Blazor.Components
 <div class="row">
     <div class="container">
-        <canvas id="@Chart.CanvasId" width="@Width" height="@Height"></canvas>
+        <canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
     </div>
 </div>
 
 @functions {
 
     [Parameter]
-    ChartJSChart Chart { get; set; }
+    BubbleChartConfig Config { get; set; }
 
     [Parameter]
     int Width { get; set; } = 400;
@@ -19,10 +20,10 @@
 
     protected override void OnAfterRender()
     {
-       ChartJsInterop.InitializeBubbleChart(Chart);
+       ChartJsInterop.InitializeBubbleChart(Config);
     }
 
-    public void UpdateChart(ChartJSChart updatedChart)
+    public void UpdateChart(BubbleChartConfig updatedChart)
     {
         ChartJsInterop.UpdateBubbleChart(updatedChart);
     }
