--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/LineChart"
 @using ChartJs.Blazor.ChartJS
+@using ChartJs.Blazor.ChartJS.LineChart
 @using ChartJs.Blazor.Components
 
 
@@ -7,31 +8,68 @@
 <div class="row">
     <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
 </div>
-<ChartJsLineChart ref="lineChartJs" Chart="@blazorLineChartJS" Width="600" Height="300"/>
+<ChartJsLineChart ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300"/>
 
 @functions{
 
-    public ChartJSChart blazorLineChartJS { get; set; }
+    public LineChartConfig lineChartConfig { get; set; }
     ChartJsLineChart lineChartJs;
 
     protected override void OnInit()
     {
-        blazorLineChartJS = blazorLineChartJS ?? new ChartJSChart()
+        lineChartConfig = lineChartConfig ?? new LineChartConfig
         {
-            ChartType = ChartTypes.LINE.ToString(),
             CanvasId = "myFirstLineChart",
-            Options = new ChartJsOptions()
+            Options = new LineChartOptions
             {
                 Text = "Sample chart from Blazor",
                 Display = true,
-                Responsive = false
-            },
-            Data = new ChartJsData()
-            {
-                Labels = new List<string>() {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
-                Datasets = new List<ChartJsDataset>()
+                Responsive = true,
+                Title = new LineChartOptionsTitle {Display = "title?", Text = "Text?"},
+                Tooltips = new LineChartOptionsTooltips()
                 {
-                    new ChartJsLineDataset()
+                    Mode = Mode.nearest,
+                    Intersect = false
+                },
+                Scales = new Scales
+                {
+                    xAxes = new List<Axis>
+                    {
+                        new Axis
+                        {
+                            Display = "xAxesDisplay",
+                            ScaleLabel = new ScaleLabel
+                            {
+                                Display = ".",
+                                LabelString = ".labelString"
+                            }
+                        }
+                    },
+                    yAxes = new List<Axis>
+                    {
+                        new Axis
+                        {
+                            Display = "yAxes",
+                            ScaleLabel = new ScaleLabel
+                            {
+                                Display = "..",
+                                LabelString = "..label"
+                            }
+                        }
+                    }
+                },
+                Hover = new LineChartOptionsHover()
+                {
+                    Intersect = true,
+                    Mode = Mode.nearest
+                }
+            },
+            Data = new LineChartData
+            {
+                Labels = new List<string> {"Red", "Blue", "Yellow", "Green", "Purple", "Orange"},
+                Datasets = new List<LineChartDataset>
+                {
+                    new LineChartDataset
                     {
                         BackgroundColor = "#ff6384",
                         BorderColor = "#ff6384",
@@ -50,31 +88,31 @@
     protected override void OnAfterRender()
     {
         Console.WriteLine("OnAfterRender");
-        lineChartJs.UpdateChart(blazorLineChartJS);
+        lineChartJs.UpdateChart(lineChartConfig);
     }
 
     public void UpdateChart()
     {
-        //Update existing dataset
-        blazorLineChartJS.Data.Labels.Add($"New{DateTime.Now.Second}");
-        var firstDataSet = blazorLineChartJS.Data.Datasets[0];
+    //Update existing dataset
+        lineChartConfig.Data.Labels.Add($"New{DateTime.Now.Second}");
+        var firstDataSet = lineChartConfig.Data.Datasets[0];
 
-        //firstDataSet.Data.Add(DateTime.Now.Second);
+        firstDataSet.Data.Add(DateTime.Now.Second);
 
-        //Add new dataset
-        //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
-        //{
-        //    BackgroundColor = "#cc65fe",
-        //    BorderColor = "#cc65fe",
-        //    Label = "# of Votes from blazor 1",
-        //    Data = new List<int> {20,21,12,3,4,4},
-        //    Fill = true,
-        //    BorderWidth = 2,
-        //    PointRadius = 3,
-        //    PointBorderWidth = 1
-        //});
+    //Add new dataset
+    //blazorLineChartJS.Data.Datasets.Add(new ChartJsLineDataset()
+    //{
+    //    BackgroundColor = "#cc65fe",
+    //    BorderColor = "#cc65fe",
+    //    Label = "# of Votes from blazor 1",
+    //    Data = new List<int> {20,21,12,3,4,4},
+    //    Fill = true,
+    //    BorderWidth = 2,
+    //    PointRadius = 3,
+    //    PointBorderWidth = 1
+    //});
 
-        lineChartJs.UpdateChart(blazorLineChartJS);
+        lineChartJs.UpdateChart(lineChartConfig);
     }
 
 
