Moved PieChart to the new object model

--- a/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
+++ b/samples/ChartJs.Blazor.Sample/Pages/LineChart.cshtml
@@ -26,7 +26,7 @@
                 Display = true,
                 Responsive = true,
                 Title = new LineChartOptionsTitle {Display = "title?", Text = "Text?"},
-                Tooltips = new LineChartOptionsTooltips()
+                Tooltips = new LineChartOptionsTooltips
                 {
                     Mode = Mode.nearest,
                     Intersect = false
@@ -58,7 +58,7 @@
                         }
                     }
                 },
-                Hover = new LineChartOptionsHover()
+                Hover = new LineChartOptionsHover
                 {
                     Intersect = true,
                     Mode = Mode.nearest
