--- a/src/ChartJs.Blazor/Components/ChartJsRadarChart.cshtml
+++ b/src/ChartJs.Blazor/Components/ChartJsRadarChart.cshtml
@@ -1,16 +1,17 @@
 ﻿@using ChartJs.Blazor.ChartJS
+@using ChartJs.Blazor.ChartJS.RadarChart
 @using Microsoft.AspNetCore.Blazor.Components
 
 <div class="row">
     <div class="container">
-        <canvas id="@Chart.CanvasId" width="@Width" height="@Height"></canvas>
+        <canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
     </div>
 </div>
 
 @functions {
 
     [Parameter]
-    ChartJSChart Chart { get; set; }
+    RadarChartConfig Config { get; set; }
 
     [Parameter]
     int Width { get; set; } = 200;
@@ -22,12 +23,12 @@
 
     protected override void OnAfterRender()
     {
-        ChartJsInterop.InitializeRadarChart(Chart);
+        ChartJsInterop.InitializeRadarChart(Config);
     }
 
-    public void UpdateChart(ChartJSChart updatedChart)
+    public void UpdateChart(RadarChartConfig chartConfig)
     {
-        ChartJsInterop.UpdateRadarChart(updatedChart);
+        ChartJsInterop.UpdateRadarChart(chartConfig);
     }
 
 }
